--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,34 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+# Ignore Terraform state files and logs
+*.tfstate
+*.tfstate.backup
+*.log
+crash.log
+.terraform/
+
+# Ignore any .env files or sensitive configuration
+.env
+.env.*
+
+# Ignore local and system-specific files
+.DS_Store
+*.swp
+*.swo
+.vscode/
+.idea/
+*.iml
+
+# Ignore GitHub Actions cache or temporary files
+.github/cache/
+.github/workflows/*.log
+
+# Ignore Kubernetes YAML files generated from Helm or templates
+kubernetes/manifests/*.yaml
+kubernetes/helm/charts/**/templates/*
+
+# Ignore CI/CD temporary files
+ci-cd/*.sh~
